syntax = "proto3";

package buDing;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = '../to';
option java_package = "com.buding.job.grpc.to";
option java_multiple_files = true;

service Server {
    rpc register (RegisterRequest) returns (google.protobuf.Empty);
    rpc logout (RegisterRequest) returns (google.protobuf.Empty);
}

message RegisterRequest {
    string serviceAddr = 1;
    int64 jobManagerId = 2;
    string jobManagerName = 3;
}

service Job {
    rpc callback (CallbackResponse) returns (google.protobuf.Empty);
}

message CallbackResponse {
    int64 id = 1;
    google.protobuf.Timestamp startTime = 2;
    google.protobuf.Timestamp endTime = 3;
    int32 status = 4;
    repeated string logs = 5;
}
